# LAYER-2-COMPLETE

./: .env.example  .eslintrc.js  .gitignore  Cargo.toml  ENV.EXAMPLE  INSTALL.md  LICENSE  OPTIMIZATIONS.md  PULL_REQUEST.md  README.md  debug-report.md  dependency-update-report.md  docker-compose.yml  documentation-en.md  documentation-it.md  hsm-implementation-report.md  implementation-report.md  implementation_report.md  install.sh  jest.config.js  optimizations.md  package-lock.json  package.json  performance-implementation-report.md  real_blockchain_test.sh  robustness-implementation-report.md  security-implementation-report.md  stress_test.sh  test-plan.md  test_and_deploy.sh  test_layer2_core.sh  todo.md  tsconfig.json
.github/: VULNERABILITY_TEMPLATE.md
anchor-implementation/: Anchor.toml  README.md
anchor-implementation/programs/layer2/: Cargo.toml
anchor-implementation/programs/layer2/src/: lib.rs
benchmark/: performance-benchmarks.js
bridge/: L1ToL2DepositBridge.sol  NFTVault.sol  QuantumResistantVerifier.sol  TokenBridge.sol  TokenVault.sol  WithdrawalBridge.sol  key-management.js  package-lock.json  package.json  quantum-resistant-signatures.js  standard-proof-format.js
config/: default.json
docs/: README.md  dependencies.md  developer-tutorial.md  high_performance_architecture.md  nft-integration-guide.md  performance_optimizations.md  robustness_system.md  security_improvements.md  security_system.md  technical_documentation.md
evm-compatibility/: evm-compatibility-layer.js  package-lock.json  package.json
fraud-proof-system/src/rust/: Cargo.toml
fraud-proof-system/src/rust/src/: bisection.rs  fraud_proof.rs  lib.rs  merkle_tree.rs  solana_runtime_wrapper.rs  state_transition.rs  verification.rs
frontend/: README.md
offchain/: alert-manager.js  api-gateway.js  auth-manager.js  automatic-recovery.js  bridge.js  cache-manager.js  circuit-breaker.js  database-manager.js  deployment-automation.js  documentation-generator.js  error_manager.js  external-service-client.js  feature-flags.js  gas_optimizer.js  graceful-degradation.js  health-checks.js  hsm-integration.js  index-with-recovery.js  key_manager.js  layer2_system.js  lmax-disruptor.js  memory-cache.js  merkle_tree.js  metrics-collector.js  metrics-server.js  monitoring-system.js  multi-level-cache.js  multi-party-computation.js  optimized-merkle-tree.js  package-lock.json  package.json  parallel-sequencer.js  performance-analyzer.js  performance-metrics.js  prefetch-worker.js  priority-queue-worker.js  priority-queue.js  query-builder.js  recovery-manager.js  recovery_system.js  (+15 more)
onchain/: Cargo.toml  README.md  deploy_devnet.sh
onchain-implementation/: Anchor.toml
onchain-implementation/programs/token_program/: Cargo.toml
onchain-implementation/programs/token_program/src/: errors.rs  instructions.rs  lib.rs  processor.rs  state.rs
onchain/src/: error.rs  instruction.rs  lib.rs  nft_mint.rs  processor.rs  processor_deposit.rs  processor_withdrawal.rs  security.rs  state.rs  token_contract.rs  validation.rs  verification.rs  wrapped_token_mint.rs
onchain/tests/: lib.rs  nft_test.rs  program_test.rs
relayer/: nft-relayer.js  package-lock.json  package.json  wormhole-relayer.js
scripts/: deploy.ts  package.sh  prepare_github.sh  run-benchmarks.js  test-compatibility.sh  verify-performance.js  (+1 more)
(+398 files in other folders)
