name = "layer2-solana"
version = "0.1.0"
edition = "2021"
description = "A Layer-2 system for Solana with optimistic rollup, trustless bridge, transaction sequencer, and fee optimization"
authors = ["DEV BUYBOT"]
license = "MIT"

[dependencies]
solana-program = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
borsh = "0.10.0"
sha2 = "0.10.0"
hex = "0.4.3"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
solana-sdk = "1.16.0"
solana-client = "1.16.0"
