# Cargo.toml per il programma Solana Layer 2

[package]
name = "solana_layer2_program"
version = "0.1.0"
edition = "2021"
description = "Programma Solana per implementazione Layer 2 con compatibilità Ethereum"
authors = ["Solana Layer 2 Team"]
license = "MIT"
repository = "https://github.com/solana-layer2/solana-layer2-program"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.14.10"
thiserror = "1.0.38"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
borsh = "0.9.3"
borsh-derive = "0.9.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
hex = "0.4.3"
sha3 = "0.10.6"
byteorder = "1.4.3"
arrayref = "0.3.6"
num-derive = "0.3.3"
num-traits = "0.2.15"

[dev-dependencies]
solana-program-test = "1.14.10"
solana-sdk = "1.14.10"
tokio = { version = "1.25.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]
