[package]
name = "fraud-proof-system"
version = "0.1.0"
edition = "2021"
description = "Fraud Proof System for Layer-2 on Solana"
authors = ["Manus AI"]

[dependencies]
solana-program = "1.16.0"
solana-sdk = "1.16.0"
solana-runtime = "1.16.0"
solana-transaction-status = "1.16.0"
borsh = "0.10.0"
borsh-derive = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
hex = "0.4.3"
thiserror = "1.0"
log = "0.4"
anyhow = "1.0"
bincode = "1.3.3"
merkle-tree = "0.1.0"

[dev-dependencies]
solana-validator = "1.16.0"
solana-test-validator = "1.16.0"
tokio = { version = "1", features = ["full"] }
