[package]
name = "token_program"
version = "0.1.0"
description = "Advanced token program with taxation, buyback, anti-rug mechanisms for Solana blockchain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
thiserror = "1.0.40"
